--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,96 +2,67 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Felipe Berrutti
     - name: Languages
-      value: English, German
+      value: English, Italian, Portuguese, Spanish
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
-      description:
-        - Description 1.
-        - Description 2.
-
-- title: Experience
-  type: time_table
-  contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
-      description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+    - title: PhD in Economics
+      institution: Northwestern University
+      year: 2020 - 2025 (expected)
+    - title: MA in Economics and Finance (summa cum laude)
+      institution: LUISS Guido Carli - Einaudi Institute for Economics and Finance 
+      year: 2018 - 2020
+    - title: Licenciatura en Economía
+      institution: Universidad de la República
+      year: 2011 - 2015
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items:
-        - Nobel Prize in Physics
-        - Matteucci Medal
-    - year: 2029
+        - Susan Schmidt Bies Prize, Northwestern University
+    - year: 2020
       items:
-        - Max Planck Medal
+        - Best Master Thesis, LUISS Guido Carli - Einaudi Institute for Economics and Finance 
+    - year: 2018 - 2020
+      items:
+        - RoME scholarship, Einaudi Institute for Economics and Finance 
+    - year: 2016 - 2017
+      items:
+        - Research initiation scholarship, Instituto de Economía
 
-- title: Academic Interests
-  type: nested_list
+- title: Experience
+  type: time_table
   contents:
-    - title: Topic 1.
-      items:
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
-      items:
-        - Description 1.
-        - Description 2.
-
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
+    - title: Teaching asisstant
+      institution: Northwestern University
+      year: 2021 - present
+      description:
+        - Senior Honors Thesis Seminar (undergraduate)
+        - Introduction to Microeconomics (undergraduate)
+    - title: Research assistant to Prof. Gastón Illanes
+      institution: Northwestern University
+      year: 2021 - 2022
+    - title: Research assistant to Prof. Andrea Pozzi
+      institution: Einaudi Institute for Economics and Finance
+      year: 2019
+    - title: Teaching assistant 
+      institution: Universidad de la República
+      year: 2016 - 2018
+      description:
+        - Databases and Statistical Packages (undergraduate)
+        - Industrial Organization (undergraduate)
+        - Linear Algebra (undergraduate)
+        - Introduction to Calculus (undergraduate)
+        - Principles of Economics (undergraduate)    
+    - title: Technical staff 
+      institution: Ministry of Social Development, Uruguay
+      year: 2015 - 2016
+    - title: Intern 
+      institution: United Nations Development Program, Uruguay
+      year: 2013 - 2015
+      
