--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,8 +11,8 @@
   contents:
     - title: PhD in Economics
       institution: Northwestern University
-      year: 2020 - 2025 (expected)
-    - title: MA in Economics and Finance (summa cum laude)
+      year: 2020 - present
+    - title: MA in Economics and Finance
       institution: LUISS Guido Carli - Einaudi Institute for Economics and Finance 
       year: 2018 - 2020
     - title: Licenciatura en Economía
