--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -30,7 +30,7 @@
         - <a href="https://www.eief.it/eief/index.php/rome-theses"> Best Master Thesis</a>, LUISS Guido Carli - Einaudi Institute for Economics and Finance 
     - year: 2018 - 2020
       items:
-        - <a href="https://www.romemaster.it/scholarships/""> RoME scholarship</a>, Einaudi Institute for Economics and Finance 
+        - <a href="https://www.romemaster.it/scholarships/"> RoME scholarship</a>, Einaudi Institute for Economics and Finance 
     - year: 2016 - 2017
       items:
         - Research initiation scholarship, Instituto de Economía
