--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: > # the website title (if blank, full name will be used instead)
+title: "Felipe **Berrutti**" # the website title (if blank, full name will be used instead)
 first_name: Felipe
 middle_name: >
 last_name: Berrutti
