--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,6 +24,9 @@
   contents:
     - year: 2023
       items:
+        -  <a href="https://bfi.uchicago.edu/the-weiss-fund/apply/travel-and-piloting/"> Weiss Fund Travel and Piloting Grant</a>, University of Chicago
+    - year: 2023
+      items:
         -  <a href="https://economics.northwestern.edu/graduate/funding/graduate-student-awards.html"> Susan Schmidt Bies Prize</a>, Northwestern University
     - year: 2020
       items:
@@ -50,6 +53,9 @@
     - title: Research assistant to Prof. Andrea Pozzi
       institution: Einaudi Institute for Economics and Finance
       year: 2019
+    - title: Research assistant to Prof. Carlos Bianchi
+      institution: Universidad de la República
+      year: 2016 - 2018
     - title: Teaching assistant 
       institution: Universidad de la República
       year: 2016 - 2018
