--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -27,7 +27,7 @@
         -  <a href="https://www.tgs.northwestern.edu/funding/fellowships-and-grants/internal-fellowships-grants/graduate-research-grant.html"> Graduate Research Grant</a>, Northwestern University
     - year: 2024
       items:
-        -  <a href="https://bfi.uchicago.edu/the-weiss-fund/apply/travel-and-piloting/"> Weiss Fund Travel and Piloting Grant</a>, University of Chicago
+        -  <a href="https://weissfund.uchicago.edu/travel-and-piloting/"> Weiss Fund Travel and Piloting Grant</a>, University of Chicago
     - year: 2023
       items:
         -  <a href="https://economics.northwestern.edu/graduate/funding/graduate-student-awards.html"> Susan Schmidt Bies Prize</a>, Northwestern University
