--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -44,6 +44,9 @@
 - title: Experience
   type: time_table
   contents:
+    - title: Summer Associate
+      institution: Analysis Group
+      year: 2024
     - title: Teaching asisstant
       institution: Northwestern University
       year: 2021 - present
