--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -24,6 +24,9 @@
   contents:
     - year: 2024
       items:
+        -  Distinguished Teaching Assistant Award, Northwestern University
+    - year: 2024
+      items:
         -  <a href="https://www.tgs.northwestern.edu/funding/fellowships-and-grants/internal-fellowships-grants/graduate-research-grant.html"> Graduate Research Grant</a>, Northwestern University
     - year: 2024
       items:
