--- a/_config.yml
+++ b/_config.yml
@@ -66,7 +66,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 
 github_username: jfberrutti # your GitHub user name
 gitlab_username: # your GitLab user name
-x_username: jfberrutti # your X handle
+x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
 linkedin_username: felipe-berrutti-0bb54832 # your LinkedIn user name
 telegram_username: # your Telegram user name
